bug 855185 - test for thread safety of resetIPFamily() r=honzab